--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -124,6 +124,7 @@
             android:hint="병원명, 질병 키워드로 병원찾기"
             android:background="#00000000"
             android:paddingLeft="5dp"
+            android:id="@+id/edtSearch"
 
             />
 
@@ -131,6 +132,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="검색"
+            android:id="@+id/btnSearch"
             />
 
 
